--- a/index.html
+++ b/index.html
@@ -41,10 +41,31 @@
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="player">
-                        <h3>John Smith</h3>
+                        <h3 class="player-name">John Smith</h3>
+                    </div><!-- /.player -->
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="player">
+                        <h3 class="player-name">Pro Rasel</h3>
+                    </div><!-- /.player -->
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="player">
+                        <h3 class="player-name">Abu Sufian</h3>
+                    </div><!-- /.player -->
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="player">
+                        <h3 class="player-name">Shajedul Karim</h3>
+                    </div><!-- /.player -->
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="player">
+                        <h3 class="player-name">Maruf Ahmed</h3>
+                    </div><!-- /.player -->
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="player">
+                        <h3 class="player-name">Mujahid</h3>
                     </div><!-- /.player -->
                 </div><!-- /.players -->
             </div><!-- /.top players -->
+            <hr>
         </section><!-- /.container -->
     </main>
     <!-- main area end -->
