--- a/index.html
+++ b/index.html
@@ -66,7 +66,128 @@
                 </div><!-- /.players -->
             </div><!-- /.top players -->
             <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blog</h2>
+                <div class="blogs">
+                    <div class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3 class="blog-title">13 of My Favorite
+                                UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                        </div>
+                    </div><!-- blog -->
+                    <div class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3 class="blog-title">UI cheat sheet: 
+                                list vs grids</h3>
+                            <p class="blog-author">By <a href="#">Tess Gadd</a></p>
+                        </div>
+                    </div><!-- blog -->
+                    <div class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3 class="blog-title">7 typography tips 
+                                for interface design</h3>
+                            <p class="blog-author">By <a href="#">Jeremiah Lam</a></p>
+                        </div>
+                    </div><!-- blog -->
+                    <div class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-details">
+                            <h3 class="blog-title">Your logo is 
+                                copied</h3>
+                            <p class="blog-author">By <a href="#">Ferdinand Vogler</a></p>
+                        </div>
+                    </div><!-- blog -->
+                </div><!-- /.blogs -->
+            </div><!-- /.top blogs -->
         </section><!-- /.container -->
+        <section class="container late-area">
+            <div class="lates-courses">
+                <h2 class="section-title">Lates Course</h2>
+                <div class="courses">
+                    <div class="course">
+                        <div class="course-thumb">
+                            <img src="images/courses/course-1.png" alt="">
+                        </div>
+                        <div class="course-details">
+                            <h3 class="course-title">React - The Complete Guide 2020</h3>
+                            <p class="course-author">Reed Krakoff.</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star emtry"></i>
+                                    <span>4.5</span>
+                                </div>
+                                <div class="time-duration">
+                                    <i class="far fa-clock"></i>
+                                    01:30 hr
+                                </div>
+                            </div>
+                        </div><!-- /.course details -->
+                    </div><!-- /.course -->
+                    <div class="course">
+                        <div class="course-thumb">
+                            <img src="images/courses/course-3.png" alt="">
+                        </div>
+                        <div class="course-details">
+                            <h3 class="course-title">The Complete JavaScript Course 2020</h3>
+                            <p class="course-author">Reed Krakoff.</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star emtry"></i>
+                                    <span>4.5</span>
+                                </div>
+                                <div class="time-duration">
+                                    <i class="far fa-clock"></i>
+                                    01:30 hr
+                                </div>
+                            </div>
+                        </div><!-- /.course details -->
+                    </div><!-- /.course -->
+                    <div class="course">
+                        <div class="course-thumb">
+                            <img src="images/courses/course-2.png" alt="">
+                        </div>
+                        <div class="course-details">
+                            <h3 class="course-title">Powerpoint 2020 Master Powerpoint Cour</h3>
+                            <p class="course-author">Walter Scott</p>
+                            <div class="course-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star emtry"></i>
+                                    <span>4.3</span>
+                                </div>
+                                <div class="time-duration">
+                                    <i class="far fa-clock"></i>
+                                    01:30 hr
+                                </div>
+                            </div>
+                        </div><!-- /.course details -->
+                    </div><!-- /.course -->
+                </div><!-- /.courses -->
+            </div><!-- /.lates-courses -->
+        </section>
     </main>
     <!-- main area end -->
 </body>
